have platformio configuration using environmental variables as build flags. was able to remove a lot of repeated build flags.

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,16 +4,14 @@
 
 [platformio]
 name = FhatOS
-description = A Distributed Embedded Systems Operating System
+version = 0.1-alpha
+description = A Distributed Operating System for Embedded Microprocessors
 extra_configs = .wifi.ini
 boards_dir = board
 
 #####################################
 ##### ESP32/ESP8266 BUILD FLAGS #####
 #####################################
-
-[var]
-stack_size = 8192
 
 [general]
 build_flags =
@@ -56,7 +54,7 @@ build_flags =
     -mfix-esp32-psram-cache-issue
 
 [memory]
-stack_size = 8192
+stack_size = 16192
 build_flags =
     -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
     -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
@@ -73,13 +71,18 @@ monitor_speed = 115200
 build_unflags =
     -std=gnu++11
 build_flags =
+    -std=gnu++17
     ${wifi.build_flags}
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
     -DUNITY_OUTPUT_COLOR
     -DUNITY_INCLUDE_PRINT_FORMATTED
     -mtext-section-literals
-    -DFOS_NAME=FhatOS
-    -DFOS_VERSION=0.1-alpha
+    -DFOS_NAME=${platformio.name}
+    -DFOS_VERSION=${platformio.version}
+    -DFOS_MACHINE_ARCH=$PIOENV
+    -DFOS_MACHINE_MODEL=$BOARD
+    -DFOS_MACHINE_SUBOS=$PIOFRAMEWORK/$PIOPLATFORM
+
 
 [esp32]
 platform = espressif32
@@ -106,8 +109,6 @@ build_flags =
     ${common.build_flags}
     ${wifi.build_flags}
     ${memory.build_flags}
-    -DFOS_MACHINE_SUBOS=espressif32/arduino
-    -std=gnu++2a
     -DARDUINO_USB_CDC_ON_BOOT=1
 #-DCONFIG_ADC_CAL_EFUSE_TP_ENABLE=0
 #-DCONFIG_ADC_CAL_EFUSE_VREF_ENABLE=0
@@ -134,7 +135,6 @@ build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
-    -std=gnu++17
 
 [boards]
 esp8266.d1_mini = d1_mini
@@ -190,8 +190,6 @@ board_build.partitions = ${partition.large_code}
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    -DFOS_MACHINE_ARCH=${this.__env__}
-    -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ###########################################
@@ -207,9 +205,6 @@ build_flags =
     -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
     -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
     -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
-############# FHATOS #############
-    -DFOS_MACHINE_ARCH=${this.__env__}
-    -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ###########################################
@@ -220,8 +215,6 @@ upload_flags = --no-stub
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    -DFOS_MACHINE_ARCH=${this.__env__}
-    -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ###########################################
@@ -232,8 +225,6 @@ board_build.partitions = ${partition.large_code}
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    -DFOS_MACHINE_ARCH=${this.__env__}
-    -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ###########################################
@@ -244,9 +235,6 @@ build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
 #${bluetooth.build_flags}
-############ FHATOS #############
-    -DFOS_MACHINE_ARCH=${this.__env__}
-    -DFOS_MACHINE_MODEL=${this.board}
 
 ###########################################
 ###########################################
@@ -256,9 +244,6 @@ board = waveshare_esp32s3_geek
 build_flags =
     ${esp32.build_flags}
     ${psram.build_flags}
-    -DFOS_MACHINE_ARCH=${this.__env__}
-    -DFOS_MACHINE_MODEL=${this.board}
-
 
 ###########################################
 ############ RASBERRY PI ZERO #############
