started the test suite for the peg parser. found some interesting parse order bugs immediately.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,7 +40,7 @@
                 INCLUDE_DIRECTORIES(${UNIT_TESTS_INCLUDES})
                 ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBoost_NO_BOOST_CMAKE=TRUE)
                 ADD_EXECUTABLE(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES})
-                TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES} paho-mqtt3c paho-mqttpp3)
+                TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES} paho-mqtt3c paho-mqttpp3 peglib)
                 ADD_TEST(test_furi_boost ${PROJECT_UNIT_TESTS_NAME})
             ELSE()
                 MESSAGE("${.r}Unable to locate Boost unit_test_framework${..}. Proceeding without respective depending tests.")
@@ -94,7 +94,7 @@
                                 unity paho-mqttpp3)
                         MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
                     ELSE()
-                        TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity paho-mqttpp3)
+                        TARGET_LINK_LIBRARIES(${PACKAGE_TEST} unity paho-mqttpp3 peglib)
                     ENDIF()
                     SET_TARGET_PROPERTIES(${PACKAGE_TEST} PROPERTIES
                             ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/test/build"
@@ -127,16 +127,17 @@
         IF(PLAYTIME)
             MAKE_TESTS(play "play" , true)
         ELSE()
-            MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
-            MAKE_TESTS(process "test_scheduler;test_process" true)
-            MAKE_TESTS(structure/router "test_router" true)
-            MAKE_TESTS(structure/stype/key_value "test_heap" , true)
-            IF(BUILD_MQTT_TESTS)
-                MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
-            ENDIF()
-            MAKE_TESTS(. "test_main;test_furi" false)
-            MAKE_TESTS(model "test_fs" true)
-            MAKE_TESTS(util "test_mutex;test_string_helper" true)
+          #  MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
+            MAKE_TESTS(language/mmadt "test_mmadt_parser" true)
+          #  MAKE_TESTS(process "test_scheduler;test_process" true)
+          #  MAKE_TESTS(structure/router "test_router" true)
+          #  MAKE_TESTS(structure/stype/key_value "test_heap" , true)
+          #  IF(BUILD_MQTT_TESTS)
+          #      MAKE_TESTS(structure/stype/mqtt "test_mqtt" , true)
+          #  ENDIF()
+          #  MAKE_TESTS(. "test_main;test_furi" false)
+          #  MAKE_TESTS(model "test_fs" true)
+          #  MAKE_TESTS(util "test_mutex;test_string_helper" true)
         ENDIF()
         MESSAGE(STATUS "${.g}Total tests produced${..}: ${.y}${TOTAL}${..}")
     ENDIF()
