--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -400,8 +400,8 @@ FETCHCONTENT_DECLARE(
 )
 FETCHCONTENT_MAKEAVAILABLE(peglib)
 TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC peglib)
-INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/include/peglib/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/peglib)
-INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/include/peglib/ DESTINATION ${CMAKE_SOURCE_DIR}/include/peglib)
+INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/peglib)
+INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/ DESTINATION ${CMAKE_SOURCE_DIR}/include/peglib)
 TARGET_LINK_LIBRARIES(fhatos PRIVATE peglib)
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 
