rewrote the mmadt parser (for the 3rd time) -- now using non-grammar based parser combinators. no more crazy recurssion blowing up the ESP32 stack.

--- a/platformio.ini
+++ b/platformio.ini
@@ -104,6 +104,7 @@ build_src_filter =
     +<**/*>
     -<test/structure/test_furi_boost.cpp>
 build_unflags =
+    -fno-rtti
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
