moved peglib into FhatOS codebase. added macros to remove rtti requirements for microprocessor architectures. started down the path of mmADT-lite which is a sugar-free rendering of the language parser.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ IF(NOT WIN32)
     SET(.M "${Esc}[1;35m")
     SET(.C "${Esc}[1;36m")
     SET(.W "${Esc}[1;37m")
+    SET(.FHATOS "${.m}F${.y}h${.b}a${.r}t${.y}O${.c}S")
 ENDIF()
 ####################################################################################################################
 ############################################ ANSI ART HEADER #######################################################
@@ -390,19 +391,22 @@ ENDIF()
 ####################################
 ####################################
 ### PEGLIB: A C++ PEG PARSER
-MESSAGE(CHECK_START "${.y}Making cpp-peblib Library${..}")
-SET(FETCHCONTENT_UPDATES_DISCONNECTED TRUE)
-FETCHCONTENT_DECLARE(
-        peglib
-        GIT_REPOSITORY https://github.com/yhirose/cpp-peglib
-        GIT_TAG v1.9.1
-        GIT_PROGRESS ${FOS_SHOW_GIT_PROGRESS}
-)
-FETCHCONTENT_MAKEAVAILABLE(peglib)
-TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC peglib)
-INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/peglib)
-INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/ DESTINATION ${CMAKE_SOURCE_DIR}/include/peglib)
-TARGET_LINK_LIBRARIES(fhatos PRIVATE peglib)
+MESSAGE(CHECK_START "${.y}Making cpp-peglib Library${..}")
+MESSAGE(NOTICE "\t${.y}IMPORTANT${..}: ${.m}cpp-peglib${..} distributed w/ ${.FHATOS} via ${.b}language/util/peglib.h${..} (altered for microprocessor architectures).")
+IF(DO_NOT)
+    SET(FETCHCONTENT_UPDATES_DISCONNECTED TRUE)
+    FETCHCONTENT_DECLARE(
+            peglib
+            GIT_REPOSITORY https://github.com/yhirose/cpp-peglib
+            GIT_TAG v1.9.1
+            GIT_PROGRESS ${FOS_SHOW_GIT_PROGRESS}
+    )
+    FETCHCONTENT_MAKEAVAILABLE(peglib)
+    TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC peglib)
+    INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/ DESTINATION ${CMAKE_INSTALL_PREFIX}/include/peglib)
+    INSTALL(DIRECTORY ${CMAKE_BINARY_DIR}/_deps/peglib-src/ DESTINATION ${CMAKE_SOURCE_DIR}/include/peglib)
+    TARGET_LINK_LIBRARIES(fhatos PRIVATE peglib)
+ENDIF()
 MESSAGE(CHECK_PASS "[${.g}COMPLETE${..}]")
 
 ############################################################################################################
