--- a/platformio.ini
+++ b/platformio.ini
@@ -42,7 +42,7 @@ build_flags =
     -DCONFIG_BT_CLASSIC_ENABLED=1
 
 [psram]
-auto_psalloc_bytes = 16
+auto_psalloc_bytes = 4
 build_flags =
     -DBOARD_HAS_PSRAM=1
     -DSPIRAM_USE_MALLOC=1
@@ -54,13 +54,13 @@ build_flags =
     -mfix-esp32-psram-cache-issue
 
 [memory]
-stack_size = 16192
+stack_size = 8096
 build_flags =
     -DCONFIG_ESP_MAIN_TASK_STACK_SIZE=${this.stack_size}
     -DconfigMINIMAL_STACK_SIZE=${this.stack_size}
     -DSET_LOOP_TASK_STACK_SIZE=${this.stack_size}
     -DFOS_ESP_THREAD_STACK_SIZE=16192
-    -DFOS_ESP_FIBER_STACK_SIZE=16192
+    -DFOS_ESP_FIBER_STACK_SIZE=8096
 
 ######################################
 ##### ESP32/8266 MICROPROCESSORS #####
@@ -104,7 +104,7 @@ build_src_filter =
     +<**/*>
     -<test/structure/test_furi_boost.cpp>
 build_unflags =
-    -fno-rtti
+    #-fno-rtti
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
