doc infrastructure, playing with new mmADT language parser, updated fhat-dev build utility, ...

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,11 @@ boards_dir = board
 build_flags =
     -DCONFIG_COMPILER_CXX_EXCEPTIONS=1
 
+[mmadt]
+build_flags =
+    -DMMADT_LANGUAGE_LEVEL=1
+    -DMMADT_VERSION=${env.version}
+
 [partition]
 large_code = board/partition/large_code.csv
 
@@ -108,6 +113,7 @@ build_unflags =
     ${common.build_unflags}
 build_flags =
     ${common.build_flags}
+    ${mmadt.build_flags}
     ${wifi.build_flags}
     ${memory.build_flags}
     -DARDUINO_USB_CDC_ON_BOOT=1
