worked on mmadt based boot script -- found lots of issues in the parser around sugars. worked on getting those up to snuff. gutted unused code from peglib package.

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,7 @@ build_flags =
 [mmadt]
 build_flags =
     -DMMADT_LANGUAGE_LEVEL=1
-    -DMMADT_VERSION=${env.version}
+    -DMMADT_VERSION=2.0-alpha
 
 [partition]
 large_code = board/partition/large_code.csv
