added support for multi-line console expressions. added support for multi-line comments. fixed a long standing bug around barriers and inst resolution. added more clever processor behavior given inst cardinalities. added more test cases. made end inst parsing more elegant.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -128,7 +128,7 @@
             MAKE_TESTS(play "play" , true)
         ELSE()
             #  MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
-            MAKE_TESTS(language/mmadt "test_mmadt_parser" true)
+            MAKE_TESTS(language/mmadt "test_mmadt_parser;test_mmadt_inst" true)
             #  MAKE_TESTS(process "test_scheduler;test_process" true)
             #  MAKE_TESTS(structure/router "test_router" true)
             #  MAKE_TESTS(structure/stype/key_value "test_heap" , true)
