--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -26,11 +26,11 @@
         IF(BUILD_BOOST_TESTS)
             MESSAGE(CHECK_START "${.y}CMaking Boost Test Framework${..}")
             SET(PROJECT_UNIT_TESTS_NAME ${PROJECT_NAME}_boost_tests)
-            CMAKE_POLICY(SET CMP0167 NEW)
+            #CMAKE_POLICY(SET CMP0167 NEW)
             SET(Boost_USE_STATIC_LIBS OFF)
             SET(Boost_USE_MULTITHREADED ON)
             SET(Boost_USE_STATIC_RUNTIME OFF)
-            FIND_PACKAGE(Boost COMPONENTS filesystem system unit_test_framework REQUIRED)
+            FIND_PACKAGE(Boost COMPONENTS unit_test_framework REQUIRED)
             IF(Boost_FOUND)
                 FILE(GLOB UNIT_TESTS_SRC_FILES ${CMAKE_SOURCE_DIR}/test/structure/*_boost.cpp)
                 SET(UNIT_TESTS_INCLUDES ${PROJECT_INCLUDE_DIR}
@@ -40,7 +40,7 @@
                 INCLUDE_DIRECTORIES(${UNIT_TESTS_INCLUDES})
                 ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBoost_NO_BOOST_CMAKE=TRUE)
                 ADD_EXECUTABLE(${PROJECT_UNIT_TESTS_NAME} ${UNIT_TESTS_SRC_FILES})
-                TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES} paho-mqtt3c paho-mqttpp3 tsl::ordered_map)
+                TARGET_LINK_LIBRARIES(${PROJECT_UNIT_TESTS_NAME} ${Boost_LIBRARIES} paho-mqtt3c paho-mqttpp3 ordered_map)
                 ADD_TEST(test_furi_boost ${PROJECT_UNIT_TESTS_NAME})
             ELSE()
                 MESSAGE("${.r}Unable to locate Boost unit_test_framework${..}. Proceeding without respective depending tests.")
