reverted back to cpp 17 as cpp 20 is only for ESP32, but not for the Ardunio framework. What a waste of time ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -129,6 +129,8 @@ ENDIF()
 ################################
 SET(ENV{no-dev})
 SET(CMAKE_CXX_STANDARD 20)
+SET(CMAKE_C_COMPILER_VERSION 14)
+SET(CMAKE_CXX_COMPILER_VERSION 14)
 SET(CMAKE_CXX_FLAGS "-Wall -Wextra ${CMAKE_CXX_FLAGS}")
 SET(CMAKE_CXX_FLAGS_DEBUG "-g ${CMAKE_CXX_FLAGS_DEBUG}")
 SET(CMAKE_CXX_FLAGS_RELEASE "-O3 ${CMAKE_CXX_FLAGS_RELEASE}")
