--- a/platformio.ini
+++ b/platformio.ini
@@ -76,7 +76,8 @@ monitor_speed = 115200
 build_unflags =
     -std=gnu++11
 build_flags =
-    -std=gnu++17
+    -std=gnu++2a
+    -DCONFIG_COMPILER_CXX_STANDARD=gnu++2a
     ${wifi.build_flags}
     -Ibuild/_deps/ordered_map-src/include/
     -DFOS_SERIAL_BAUDRATE=${this.monitor_speed}
