new test suite. testing seriqalization and inst equality for both cpp and obj inst impls.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -127,7 +127,7 @@
         IF(PLAYTIME)
             MAKE_TESTS(play "play" , true)
         ELSE()
-            #  MAKE_TESTS(language "test_fluent;test_obj;test_parser;test_insts" true)
+            MAKE_TESTS(language "test_obj" true)
             MAKE_TESTS(language/mmadt "test_mmadt_parser;test_mmadt_inst" true)
             #  MAKE_TESTS(process "test_scheduler;test_process" true)
             #  MAKE_TESTS(structure/router "test_router" true)
@@ -139,5 +139,5 @@
             #  MAKE_TESTS(model "test_fs" true)
             #  MAKE_TESTS(util "test_mutex;test_string_helper" true)
         ENDIF()
-        MESSAGE(STATUS "${.g}Total tests produced${..}: ${.y}${TOTAL}${..}")
+        MESSAGE(STATUS "${.g}total tests produced${..}: ${.y}${TOTAL}${..}")
     ENDIF()
