worked on pub/sub for both local and remote execution. really clean model. working on getting the mm-ADT stack trace to be more informative. made a little progress.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,11 @@ CMAKE_MINIMUM_REQUIRED(VERSION 3.25.0)  # CMake version check
 INCLUDE(CMakePrintHelpers)
 INCLUDE(FetchContent)
 INCLUDE(ExternalProject)
+SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
+SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
 INCLUDE(CPack)
+
+
 PROJECT(fhatos)
 
 ##############################################
@@ -155,6 +159,7 @@ MESSAGE(CHECK_START "${.y}configuring packaging with cpack${..}")
 SET(CPACK_PACKAGE_NAME ${PROJECT_NAME})
 SET(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 SET(CPACK_PACKAGING_INSTALL_PREFIX "/opt/${CPACK_PACKAGE_NAME}/${CMAKE_PROJECT_VERSION}")
+SET(CPACK_SET_DESTDIR ${CMAKE_BINARY_DIR})
 SET(CPACK_GENERATOR DEB)
 SET(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
 SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "FhatOS Distributed Operating System")
